refactoring: rename button

--- a/wb_0_front/index.html
+++ b/wb_0_front/index.html
@@ -10,7 +10,7 @@
     <input id="url"></input>
     <label for="orderId">ID заказа</label>
     <input id="orderId"></input>
-    <button type="submit" onclick="getOrder()">dada</button>
+    <button type="submit" onclick="getOrder()">Отправить</button>
 
     <div class="result" id="result"></div>
 
